--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swasthya Homeo Voice Assistant</title>
+    <link rel="icon" href="data:image/svg+xml,%3Csvg viewBox='0 0 200 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3ClinearGradient id='ai-grad' x1='0.5' y1='0' x2='0.5' y2='1'%3E%3Cstop offset='0%25' stop-color='%234ade80'/%3E%3Cstop offset='100%25' stop-color='%233b82f6'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg transform='translate(5, 5)'%3E%3Cpath d='M70,30 h-10 v-10 h30 v10 h-10 M60,30 h40 v105 a10,10 0 0 1 -10,10 h-20 a10,10 0 0 1 -10,-10 v-105' fill='%23f0fdf4' stroke='%2314532d' stroke-width='4' stroke-linejoin='round'/%3E%3Crect x='65' y='10' width='30' height='10' rx='2' fill='%23bbf7d0' stroke='%2314532d' stroke-width='4'/%3E%3Ccircle cx='60' cy='125' r='7' fill='%2316a34a' opacity='0.6'/%3E%3Ccircle cx='85' cy='135' r='4' fill='%2316a34a' opacity='0.6'/%3E%3Ccircle cx='110' cy='120' r='5' fill='%2316a34a' opacity='0.6'/%3E%3Ccircle cx='95' cy='55' r='8' fill='%2316a34a' opacity='0.6'/%3E%3Ccircle cx='70' cy='65' r='4' fill='%2316a34a' opacity='0.6'/%3E%3Crect x='50' y='70' width='60' height='40' fill='%23ffffff' rx='3' /%3E%3Ccircle cx='80' cy='90' r='10' fill='%23f0fdf4'/%3E%3Ccircle cx='76' cy='86' r='3' fill='%2316a34a' opacity='0.6'/%3E%3Ccircle cx='87' cy='94' r='2' fill='%2316a34a' opacity='0.6'/%3E%3Cg stroke-width='4' fill='none' stroke-linecap='round'%3E%3Cpath d='M110 80 l 15 0 l 10 -15' stroke='url(%23ai-grad)'/%3E%3Cpath d='M110 87 l 20 0' stroke='url(%23ai-grad)'/%3E%3Cpath d='M110 93 l 20 0' stroke='url(%23ai-grad)'/%3E%3Cpath d='M110 100 l 15 0 l 10 15' stroke='url(%23ai-grad)'/%3E%3C/g%3E%3Cg fill='url(%23ai-grad)'%3E%3Ccircle cx='140' cy='65' r='6'/%3E%3Ccircle cx='135' cy='87' r='6'/%3E%3Ccircle cx='135' cy='93' r='6'/%3E%3Ccircle cx='140' cy='115' r='6'/%3E%3C/g%3E%3Ctext x='145' y='100' font-family='sans-serif' font-size='30' font-weight='bold' fill='%232563eb'%3EAi%3C/text%3E%3C/g%3E%3C/svg%3E" />
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
@@ -16,7 +17,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-slate-50">
     <div id="root"></div>
